// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/SummaryList Standard smoke-test 1`] = `
<dl class="nhsuk-summary-list">
  <div class="nhsuk-summary-list__row">
    <dt class="nhsuk-summary-list__key">
      Name
    </dt>
    <dd class="nhsuk-summary-list__value">
      Sarah Philips
    </dd>
    <dd class="nhsuk-summary-list__actions">
      <a href="stories#">
        Change
      </a>
    </dd>
  </div>
  <div class="nhsuk-summary-list__row">
    <dt class="nhsuk-summary-list__key">
      Date of birth
    </dt>
    <dd class="nhsuk-summary-list__value">
      5 January 1978
    </dd>
    <dd class="nhsuk-summary-list__actions">
      <a href="stories#">
        Change
      </a>
    </dd>
  </div>
  <div class="nhsuk-summary-list__row">
    <dt class="nhsuk-summary-list__key">
      Contact information
    </dt>
    <dd class="nhsuk-summary-list__value">
      72 Guild Street
      <br>
      London
      <br>
      SE23 6FH
    </dd>
    <dd class="nhsuk-summary-list__actions">
      <a href="stories#">
        Change
      </a>
    </dd>
  </div>
  <div class="nhsuk-summary-list__row">
    <dt class="nhsuk-summary-list__key">
      Contact details
    </dt>
    <dd class="nhsuk-summary-list__value">
      <p class="nhsuk-body">
        07700 900457
      </p>
      <p class="nhsuk-body">
        sarah.phillips@example.com
      </p>
    </dd>
    <dd class="nhsuk-summary-list__actions">
      <a href="stories#">
        Change
      </a>
    </dd>
  </div>
</dl>
`;

exports[`Components/SummaryList SummaryListWithoutActions smoke-test 1`] = `
<dl class="nhsuk-summary-list">
  <div class="nhsuk-summary-list__row">
    <dt class="nhsuk-summary-list__key">
      Name
    </dt>
    <dd class="nhsuk-summary-list__value">
      Sarah Philips
    </dd>
  </div>
  <div class="nhsuk-summary-list__row">
    <dt class="nhsuk-summary-list__key">
      Date of birth
    </dt>
    <dd class="nhsuk-summary-list__value">
      5 January 1978
    </dd>
  </div>
  <div class="nhsuk-summary-list__row">
    <dt class="nhsuk-summary-list__key">
      Contact information
    </dt>
    <dd class="nhsuk-summary-list__value">
      72 Guild Street
      <br>
      London
      <br>
      SE23 6FH
    </dd>
  </div>
  <div class="nhsuk-summary-list__row">
    <dt class="nhsuk-summary-list__key">
      Contact details
    </dt>
    <dd class="nhsuk-summary-list__value">
      <p class="nhsuk-body">
        07700 900457
      </p>
      <p class="nhsuk-body">
        sarah.phillips@example.com
      </p>
    </dd>
  </div>
</dl>
`;

exports[`Components/SummaryList SummaryListWithoutBorder smoke-test 1`] = `
<dl class="nhsuk-summary-list nhsuk-summary-list--no-border">
  <div class="nhsuk-summary-list__row">
    <dt class="nhsuk-summary-list__key">
      Name
    </dt>
    <dd class="nhsuk-summary-list__value">
      Sarah Philips
    </dd>
  </div>
  <div class="nhsuk-summary-list__row">
    <dt class="nhsuk-summary-list__key">
      Date of birth
    </dt>
    <dd class="nhsuk-summary-list__value">
      5 January 1978
    </dd>
  </div>
  <div class="nhsuk-summary-list__row">
    <dt class="nhsuk-summary-list__key">
      Contact information
    </dt>
    <dd class="nhsuk-summary-list__value">
      72 Guild Street
      <br>
      London
      <br>
      SE23 6FH
    </dd>
  </div>
  <div class="nhsuk-summary-list__row">
    <dt class="nhsuk-summary-list__key">
      Contact details
    </dt>
    <dd class="nhsuk-summary-list__value">
      <p class="nhsuk-body">
        07700 900457
      </p>
      <p class="nhsuk-body">
        sarah.phillips@example.com
      </p>
    </dd>
  </div>
</dl>
`;
